--- a/Bezier/Base.lproj/Main.storyboard
+++ b/Bezier/Base.lproj/Main.storyboard
@@ -1,48 +1,42 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9059" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_1" orientation="landscape" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Bezier" customModuleProvider="target" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
-                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
-                    </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="667" height="375"/>
+                        <rect key="frame" x="0.0" y="0.0" width="896" height="414"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="grid_bg" translatesAutoresizingMaskIntoConstraints="NO" id="Qjc-ae-qwX">
-                                <rect key="frame" x="0.0" y="0.0" width="667" height="375"/>
-                                <animations/>
+                                <rect key="frame" x="0.0" y="0.0" width="896" height="414"/>
                             </imageView>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RY3-hh-ORx" customClass="BezierView" customModule="Bezier" customModuleProvider="target">
-                                <rect key="frame" x="20" y="40" width="627" height="315"/>
-                                <animations/>
-                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                            <view contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RY3-hh-ORx" customClass="BezierView" customModule="Bezier" customModuleProvider="target">
+                                <rect key="frame" x="60" y="20" width="776" height="373"/>
+                                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                             </view>
                         </subviews>
-                        <animations/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="Qjc-ae-qwX" secondAttribute="trailing" id="2bF-3f-udv"/>
                             <constraint firstAttribute="leadingMargin" secondItem="RY3-hh-ORx" secondAttribute="leading" id="6cz-cq-MYs"/>
                             <constraint firstItem="Qjc-ae-qwX" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="BWh-hD-oz2"/>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="Qjc-ae-qwX" secondAttribute="bottom" id="GUf-lH-Wfi"/>
+                            <constraint firstItem="Qjc-ae-qwX" firstAttribute="top" secondItem="GcF-3W-WkK" secondAttribute="top" id="KJ1-Lx-LY1"/>
                             <constraint firstAttribute="trailingMargin" secondItem="RY3-hh-ORx" secondAttribute="trailing" id="Knp-Ze-8NG"/>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="RY3-hh-ORx" secondAttribute="bottom" constant="20" id="bf9-bf-HDN"/>
-                            <constraint firstItem="RY3-hh-ORx" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="20" id="n7P-Fc-JBO"/>
-                            <constraint firstItem="Qjc-ae-qwX" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="-20" id="qZi-Ya-6nb"/>
+                            <constraint firstAttribute="bottom" secondItem="Qjc-ae-qwX" secondAttribute="bottom" id="N1u-OK-hEq"/>
+                            <constraint firstItem="GcF-3W-WkK" firstAttribute="bottom" secondItem="RY3-hh-ORx" secondAttribute="bottom" id="bf9-bf-HDN"/>
+                            <constraint firstItem="RY3-hh-ORx" firstAttribute="top" secondItem="GcF-3W-WkK" secondAttribute="top" constant="20" id="n7P-Fc-JBO"/>
                         </constraints>
+                        <viewLayoutGuide key="safeArea" id="GcF-3W-WkK"/>
                     </view>
-                    <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
-                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                     <connections>
                         <outlet property="firstBezierView" destination="RY3-hh-ORx" id="LFR-NP-2NZ"/>
                     </connections>
